name:                pipeline
version:             0.1.0.0
synopsis:            DSL for describing hardware pipelines.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Gleb Gagarin
maintainer:          gleb61@gmail.com
-- copyright:           
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hardware.PipelineDSL,
                       Hardware.PipelineDSL.Verilog,
                       Hardware.PipelineDSL.HW,
                       Hardware.PipelineDSL.Pipeline,
                       Hardware.PipelineDSL.Module
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.10, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example1
  default-language:    Haskell2010
  main-is:             example1.hs
  hs-source-dirs:      examples,src
  build-depends:       base >=4.8, mtl

executable module_example
  default-language:    Haskell2010
  main-is:             module_example.hs
  hs-source-dirs:      examples,src
  build-depends:       base >=4.8, mtl
